<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Afegir">

    <TextView
        android:id="@+id/tvUnidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unidades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/etCajas"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/etBarres"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBarres"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvBarres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codi_barras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUC"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/tvProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/etPreu"
        android:layout_width="77dp"
        android:layout_height="55dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvPVP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toEndOf="@+id/tvPVP"
        app:layout_constraintTop_toTopOf="@+id/tvPVP"
        app:layout_constraintVertical_bias="0.527"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvPVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBarres"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_producto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/btnEscanear"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:background="@color/lima_dark"
        android:text="@string/escanear"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/etBarres"
        app:layout_constraintTop_toBottomOf="@+id/tvBarres"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/etUC"
        android:layout_width="103dp"
        android:layout_height="46dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/tvUC"
        app:layout_constraintTop_toBottomOf="@+id/tvCajas"
        app:layout_constraintVertical_bias="0.134"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lima_dark"
        android:text="@string/guardar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPVP"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:background="@color/lima_dark"
        android:text="@string/cancelar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPVP"
        app:layout_constraintVertical_bias="0.481" />

    <EditText
        android:id="@+id/etProducte"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:autoText="false"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        android:ems="10"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toEndOf="@+id/tvProducto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etUnidades"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toEndOf="@+id/tvUnidades"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProducto"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/etCajas"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/tvCajas"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinCategory"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/lima_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/etProducte"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/tvCajas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cajas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/tvUC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCajas"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/etPreu"
        app:layout_constraintTop_toBottomOf="@+id/etBarres"
        app:layout_constraintVertical_bias="0.237" />
</androidx.constraintlayout.widget.ConstraintLayout>